remove NA column using column name instead of column ID

--- a/contributions_by_Texas.Rmd
+++ b/contributions_by_Texas.Rmd
@@ -35,7 +35,7 @@ Data <- read.csv('ctrbsTX.csv',
 data_headers <- colnames(Data)[-1]
 
 # In the data, remove the last column which is all NAs.
-Data <- Data[,-19]
+Data$election_tp <- NULL
 
 # Give the data right header names for each columns.
 colnames(Data) <- data_headers
